# esp32p4-mqjs

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.tab5.defaults.example
components/audio_device/: CMakeLists.txt  Kconfig  audio_device.c  audio_device_core.c  audio_device_selftest.c
components/audio_device/include/: audio_device.h  audio_device_core.h
components/audio_device/tools/: audio_device_test.c
components/audio_tab5/: CMakeLists.txt  Kconfig  audio_tab5.c  idf_component.yml  wav.c  wav.h
components/audio_tab5/include/: audio_tab5.h
components/audio_tab5/tools/: wav_test.c
components/cam_tab5/: CMakeLists.txt  Kconfig  bc_locate.c  bc_tensor_p4.S  cam_tab5.c  ean13.c  idf_component.yml
components/cam_tab5/include/: bc_locate.h  cam_tab5.h  ean13.h
components/cam_tab5/tools/: bc_locate_test.c  ean13_test.c
components/mqjs/: CMakeLists.txt  device_stdlib.c  gen_stdlib_headers.cmake  idf_component.yml  mqjs_classes.h  mqjs_power.c  mqjs_power.h  mqjs_runtime.c  mqjs_runtime.h
components/mqjs/app/: mqjs_app_manager.c  mqjs_app_manager.h  mqjs_app_manager_internal.h
components/mqjs/gen_pc/: device_stdlib.h
components/mqjs/mquickjs/: example.c  mqjs.c  mqjs_stdlib.c  mquickjs_priv.h
components/mqjs/tools/: app_manager_test.c  compile_task.c  mqtt_stub_test.js  p4_clip_a.js  p4_clip_b.js  p4_open_test.js  p4_ping.js  p4_pong.js  run_pc.c  test_pc.c
components/smooth_ui_toolkit/: idf_component.yml
components/sshc/: CMakeLists.txt  Kconfig  idf_component.yml  sshc.c
components/sshc/include/: sshc.h
components/sshc/wolfssl_override/: user_settings.h
components/tweetnacl/: CMakeLists.txt  test_verify.c  tweetnacl.c  tweetnacl.h
components/ui_tab5/: CMakeLists.txt  Kconfig  idf_component.yml  ili9881_init_data.inc  st7123_init_data.inc  ui_tab5.cpp  ui_tab5_internal.h  ui_widgets.cpp
components/ui_tab5/fonts/: LICENSE  decode_test.py  font_nf_ui_20.c  font_term_mono.c
components/ui_tab5/include/: ui_tab5.h
docs/: app-manager-migration.md  audio-device-design.md  audio-pipeline.md  audio-tab5-status.md  launcher-multiapp-design.md  pie-tensor-asm-plan.md  power-states.md  runtime-hotspot-audit.md  scanline-opt-plan.md  ssh-terminal-design.md  tab5-ui-design.md  widget-framework-design.md
examples/: README.md  audio_spectrum.js  audio_test.js  bench.js  blink_button.js  cam_demo.js  cells_test.js  circuit.js  clip_mirror.js  console_flood.js  i2c_scan.js  kbd_demo.js  launcher.js  life.js  mandelbrot.js  morse.js  mqtt_demo.js  p4_bg_app.js  p4_clip_get.js  p4_clip_probe.js  p4_dev_probe.js  p4_fg_probe.js  p4_rebuild_probe.js  reaction.js  reading.js  settings_demo.js  ssh_term.js  ssh_vt.js  touch_demo.js  ui_console_test.js  ui_demo.js  w2_store_probe.js  w2_unwind_probe.js  widget_leak_probe.js
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board_tab5.c  board_tab5.h  idf_component.yml  jsmem_bench.c  net_mqtt.c  net_mqtt.h  ppa_bench.c  script_runner.h  script_store.c  script_store.h  storage.c  storage.h  task_pubkey.h  task_source.c  task_source.h  ui_status.c  ui_status.h  wifi.c  wifi.h
tools/: capture_com8.py  dev_idle.js  mqjs_keygen.py  mqjs_push.py  mqjs_webui.py  mqtt_pub.py  ndl_bridge.py  probe_audio.js  probe_cam.js  probe_http.js  probe_phase1.js  probe_phase4.js  probe_run_apps.js  probe_store_apps.js  probe_store_perf.js  shelve_all.sh  smoke_examples.sh  store_probe.js  test_phase1.js  test_phase1_peer.js  test_ssh_vt_security.py  test_ssh_vt_security.sh  test_vault_isolation.py
